Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
BSW ILK : igt@gem_spin_batch@[legacy-default|spin-each] - fail - Failed assertion: ns > 0
- Out
- IGT-Version: 1.25-g58b135e66 (x86_64) (Linux: 5.11.0-rc1-g031143817afd9-drmtip_746+ x86_64)
- Starting subtest: legacy-default
- Stack trace:
- #0 ../lib/igt_core.c:1727 __igt_fail_assert()
- #1 ../lib/igt_dummyload.c:510 igt_spin_set_timeout()
- #2 ../tests/i915/gem_spin_batch.c:56 spin.isra.1.constprop.3()
- #3 ../tests/i915/gem_spin_batch.c:199 __real_main180()
- #4 ../tests/i915/gem_spin_batch.c:180 main()
- #5 ../csu/libc-start.c:344 __libc_start_main()
- #6 [_start+0x2a]
- Subtest legacy-default: FAIL (3.089s)
- Err
- Starting subtest: legacy-default
- (gem_spin_batch:1070) igt_dummyload-CRITICAL: Test assertion failure function igt_spin_set_timeout, file ../lib/igt_dummyload.c:488:
- (gem_spin_batch:1070) igt_dummyload-CRITICAL: Failed assertion: ns > 0
- Subtest legacy-default failed.